- Change: Removed deprecated code.
- Change: Use json_validate() if available to determine if a
  string is a json string.
- Change: Simplified the routing process.
- Change: Removed some literals.
- Change: Some deprecations.
- Change: Only use byRef when absolutely necessary.
- Change: We do not filter the file path anymore.
- Added class meta analysis for class names in strings.

5.0.6
- Bugfix: Removed some self:: references.

5.0.5
- Added formatting for float values for better readability.
- Added an event to the output of the inline js and css.
- Bugfix: Make sure that the JS only executes once.

5.0.4
- Change: Made implicitly nullable parameter declarations
  explicitly nullable.
- Bugfix: Catch a Throwable in the ProcessInteger.
- Bugfix: Better Base64 detection.
- Bugfix: The error handler was not removed in the file reader.
- Bugfix: The no-js feedback handles CSP headers.
- Bugfix: The translations are located in a div in the header.
- Bugfix: Missing BOM encoding in the code generation.

5.0.3
- Bugfix: Possible warning in file reader.
- Bugfix: Possible fatals in the file reader.
- Bugfix: Do not use the $GLOBALS recursion marker in PHP 8.1
  or higher.

5.0.2
- Added the possibility for plugins to overwrite the factory
  settings.
- Change: Removed deprecated code.
- Change: Some deprecations.
- Bugfix: The event
  'Brainworxx\Krexx\Analyse\Callback\Analyse\Objects\DebugMethods::callMe::start'
  was called too late.
- Bugfix: Make use of the internal error callback in the string
  encoding class.
- Bugfix: Add the missing "Line no." to the translation.
- Bugfix: Added missing return types to the return type whitelist
  in the ReturnType comment analysis.
- Bugfix: Added missing types to the blacklist of none namespaces
  declaration types.
- Bugfix: Added missing translations for the setting.
- Bugfix: Do not access debug class values before their
  initialization.

5.0.1
- Change: Updated the unit tests to 10.5