@@ -69,6 +69,8 @@ stringTooLarge = "This is a very large string with a none-standard encoding.<br 
 maxCallReached = "Maximum call-level reached. This is the last analysis for this request. To increase this value, please edit:<br />Emergency stop => Max amount of calls."
 noSourceAvailable = "No sourcecode available. Maybe this was an internal callback (call_user_func for example)?"
 getterNull = "A NULL value as a result may indicate that this value gets computed by the getter method, and does not exist inside the class at the moment of the analysis."
+getterValueUnknown = "unknown"
+getterUnknown = "The getter return value could not be determined."
 emergencyTimer = "Emergency break due to extensive run time!"
 emergencyMemory = "Emergency break due to extensive memory usage!"
 fileserviceDelete = "Unable to delete file: %s"
@@ -275,6 +277,8 @@ stringTooLarge = "Das hier ist ein extrem großer String, in einer Nicht-Standar
 maxCallReached = "Maximale anzahl an Aufrufen erreicht. Dies ist die letzte Analyse für diesen Request. Um diesen wert zu erhöhen, bitte 'Nothalt => Maximale Anzahl an Aufrufen' anpassen."
 noSourceAvailable = "Quellcode steht nicht zur Verfügung. Eventuell war das ein interner aufruf (z.B. call_user_func())?"
 getterNull = "Ein NULL Wert kann bedeuten dass der Wert erst noch von der Getter Methode errechnet wird und deswegen zum Zeitpunkt der analyse noch nicht existiert."
+getterValueUnknown = "unbekannt"
+getterUnknown = "Der Rückgabewert der Getter Methode konnte nicht bestimmt werden."
 emergencyTimer = "Nothalt wegen zu langer Laufzeit!"
 emergencyMemory = "Nothalt wegen zu hohem Speicherverbrauch!"
 fileserviceDelete = "Datei %s kann nicht gelöscht werden."
